<resources>
    <string name="app_name">Turanth HR</string>
    <string name="scr_lbl_please_enter_your_username_and_password">Please enter your Username and password to login successfully.</string>
    <string name="scr_lbl_username">Username</string>
    <string name="scr_lbl_password">Password</string>
    <string name="scr_lbl_truck_details"><u>Truck Documents</u></string>
    <string name="scr_lbl_cleaner_details"><u>Cleaner Details</u></string>
    <string name="scr_lbl_cleaner_batta">क्लीनर भत्ता</string>
    <string name="scr_lbl_cleaner_bhatta">ड्राइवर भत्ता ( टोटल दिन : 03 )</string>
    <string name="scr_lbl_cleaner_bhatta_new">ड्राइवर भत्ता ( टोटल दिन : 03 )</string>
    <string name="scr_lbl_trip_kharcha">ट्रिप खर्चा</string>
    <string name="scr_lbl_okay">OKAY</string>
    <string name="scr_lbl_not_okay">NOT OKAY</string>
    <string name="err_msg_connection_was_refused">Please check your internet connection or try again later</string>
    <string name="scr_lbl_add_kharcha">खर्चा ऐड करे</string>
    <string name="scr_lbl_total_hisab">टोटल हिसाब</string>
    <string name="scr_message_please_wait">Please wait..</string>
    <string name="scr_lbl_upload">UPLOAD</string>
    <string name="scr_lbl_save">SAVE</string>
    <string name="scr_lbl_total_kharcha">टोटल खर्चा</string>
    <string name="scr_lbl_kharcha_add_kijiye">खर्चा ऐड कीजिए</string>
    <string name="scr_lbl_kitna_kharcha">कितना खर्चा</string>
    <string name="msg_kharcha_saved">Kharcha Saved Successfully!</string>
    <string name="msg_kharcha_uploaded">Kharcha Uploaded Successfully!</string>
    <string name="scr_lbl_pending_hisab">पेंडिंग हिसाब :</string>
    <string name="scr_lbl_gadi_no">गाड़ी नं.</string>
    <string name="scr_lbl_awadhi">अवधि</string>
    <string name="scr_lbl_trip">ट्रिप</string>
    <string name="scr_lbl_pass_hisab">Pass Hisab</string>
    <string name="scr_title_purana_hisab">पुराना हिसाब</string>
    <string name="scr_lbl_cleaner_name">क्लीनर : </string>
    <string name="scr_lbl_aur_janiye">और जानिए</string>
    <string name="scr_lbl_complaint">COMPLAIN</string>
    <string name="scr_lbl_check_issue">Check Issue</string>
    <string name="scr_lbl_toll_kharcha">टोल खर्चा</string>
    <string name="scr_lbl_submit">SUBMIT</string>
    <string name="scr_lbl_start_recording">Start Recording</string>
    <string name="scr_lbl_description">डिस्क्रिप्शन</string>
    <string name="msg_issue_submitted">Issue Submitted Successfully!</string>
    <string name="scr_lbl_raise_issue">Raise Issue</string>
    <string name="scr_lbl_issue_recording">Issue Recording</string>
    <string name="scr_lbl_cancel">CANCEL</string>
    <string name="scr_lbl_eway_bill">इ-वे बिल</string>
    <string name="val_msg_please_enter_email">Please enter username.</string>
    <string name="val_msg_please_enter_mobile">Please enter mobile.</string>
    <string name="val_msg_please_enter_password">Please Enter Password.</string>
    <string name="val_msg_please_enter_name">Please Enter Name.</string>
    <string name="val_msg_please_enter_poi">Please Enter Product Of Interest.</string>
    <string name="val_msg_please_enter_tour">Please Enter Tour.</string>
    <string name="val_msg_please_enter_soi">Please Enter Source Of Enquiry.</string>
    <string name="val_msg_please_enter_description">Please enter description.</string>
    <string name="val_msg_please_enter_valid_description">Reminder already exists, Please enter valid description.</string>
    <string name="val_msg_minimum_password">Required password is between 6 to 12 characters</string>
    <string name="scr_lbl_general_manager">General Manager</string>
    <string name="scr_lbl_call_manager">कॉल मॅनेजर</string>
    <string name="scr_lbl_dept_manager">Dept. Manager     </string>
    <string name="scr_lbl_asst_manager">Asst. Manager         </string>
    <string name="scr_lbl_all_contacts">All Contacts</string>
    <string name="scr_lbl_branch_contacts">ब्रांच कॉन्टेक्ट्स</string>
    <string name="scr_lbl_call">Call</string>
    <string name="scr_lbl_driver_hisab">Driver Hisab</string>
    <string name="scr_lbl_passed_hisab">Passed Hisab</string>
    <string name="scr_title_complaints">कम्प्लेंट्स</string>
    <string name="scr_title_notifications">नोटिफिकेशन्स</string>
    <string name="scr_lbl_hisab_upload">Hisab Upload</string>
    <string name="scr_lbl_trip_kharcha_alert">ट्रिप खर्चा अलर्ट</string>
    <string name="scr_lbl_advance_prapt">एडवांस प्राप्त हुआ</string>
    <string name="scr_lbl_branch_nam">ब्रांच नाम</string>
    <string name="scr_lbl_staff_nam">स्टाफ नाम</string>
    <string name="scr_lbl_truck_details_hindi">ट्रक डिटेल्स</string>
    <string name="scr_lbl_puc">पि - यु - सी सर्टिफिकेट</string>
    <string name="scr_lbl_issurance_cert">इन्शुरन्स सर्टिफिकेट</string>
    <string name="scr_lbl_contacts">कॉन्ट्रैक्ट</string>
    <string name="scr_lbl_cleaner_details_marathi">क्लीनर डिटेल्स</string>
    <string name="msg_weight_submitted">Weight Submitted Successfully!</string>
    <string name="scr_lbl_find_in_maps">Find In Maps</string>
    <string name="scr_lbl_kata_chitthi_weight">कांटा चिट्ठी वजन</string>
    <string name="scr_lbl_unresolved">Unresolved</string>
    <string name="scr_lbl_stop_recording">Recording Completed</string>
    <string name="scr_lbl_advance_assign">Advance Assigned</string>
    <string name="scr_lbl_enter_lp_no">Enter your LR number</string>
    <string name="scr_lbl_add_lr">Add LR</string>
    <string name="scr_lbl_search_all">List LRs</string>
    <string name="scr_lbl_selected_lr_number">List all LRs</string>
    <string name="scr_lbl_lr_date">Date</string>
    <string name="scr_lbl_vehicle_no">Vehicle No.</string>
    <string name="scr_lbl_plant">Plant</string>
    <string name="scr_lbl_no_of_lr">No Of LR</string>
    <string name="scr_lbl_add_new_lr">Add New LR</string>
    <string name="scr_lbl_lr_no">LR No.</string>
    <string name="scr_lbl_lr_details">LR Details</string>
    <string name="scr_lbl_data_loading">Please wait, data is loading.....</string>
    <string name="scr_lbl_lr_data_loading">Please wait, Lr data is loading.....</string>
    <string name="scr_lbl_no_data_available">No Data Available.</string>
    <string name="msg_no_such_lr">No such LR found!</string>
    <string name="scr_lbl_no_pending">No Pending Record</string>
    <string name="scr_lbl_sale">Sale</string>
    <string name="scr_lbl_dashboard">Dashboard</string>
    <string name="scr_lbl_sales_credit">Sales Credit</string>
    <string name="scr_lbl_overdue_by_days">Overdue\nby days</string>
    <string name="scr_lbl_add_reminder">Add Reminder</string>
    <string name="scr_lbl_description_eng">Description</string>
    <string name="scr_lbl_add_visit">Add Visit</string>
    <string name="scr_lbl_state">State</string>
    <string name="scr_lbl_status">Status</string>
    <string name="scr_lbl_company_eng">Company</string>
    <string name="scr_lbl_amount">Amount</string>
    <string name="scr_lbl_enter_receipt_amount">Enter Receipt Amount</string>
    <string name="scr_lbl_reminder_status">Reminder Status</string>
    <string name="scr_lbl_add_receipt">Add Receipt</string>
    <string name="scr_lbl_filter">Filters</string>
    <string name="scr_lb_filter_by">Filter by</string>
    <string name="scr_lbl_rm">RM</string>
    <string name="scr_lbl_quotations">Quotations</string>
    <string name="scr_lbl_enquiries">Enquiries</string>
    <string name="scr_lbl_invoices">Invoices</string>
    <string name="scr_lbl_quoted_no">Quoted No</string>
    <string name="scr_lbl_invoice_no">Invoice No</string>
    <string name="scr_lbl_billed_amt">Billed Amt</string>
    <string name="scr_lbl_sent_date">Sent Date</string>
    <string name="scr_lbl_quoted_amt">Quoted Amt</string>
    <string name="scr_lbl_enquiry">Enquiry</string>
    <string name="scr_lbl_reset">Reset</string>
    <string name="scr_lbl_company_info">Company Info</string>
    <string name="scr_lbl_address">Address</string>
    <string name="scr_lbl_gst_no">GST No</string>
    <string name="scr_lbl_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scr_lbl_receipt">Receipt</string>
    <string name="scr_lbl_receipt_number">Receipt Number</string>
    <string name="scr_lbl_receipt_details">Receipt Details</string>
    <string name="scr_lbl_top_customer">Top Customer</string>
    <string name="scr_lbl_total_quotation_amount">Total Quotation Amount</string>
    <string name="msg_please_tap_on_download_to_get_pdf_of_quotation">Please tap on download to get PDF of Quotation.</string>
    <string name="scr_lbl_download">Download</string>
    <string name="scr_lbl_dispatch_pending">Dispatch Pending</string>
    <string name="scr_lbl_quotation_number">Quotation\nNumber</string>
    <string name="scr_lbl_quotation_status">Quotation\nStatus</string>
    <string name="scr_lbl_po_number">PO Number</string>
    <string name="scr_lbl_item">Item</string>
    <string name="scr_lbl_company_name">Company\nName</string>
    <string name="scr_lbl_enquiry_number">Enquiry Number</string>
    <string name="scr_lbl_enquiry_status">Enquiry\nStatus</string>
    <string name="scr_lbl_enquiry_details">Enquiry Details</string>
    <string name="scr_lbl_visit_report">Visit Report</string>
    <string name="scr_lbl_report">Report</string>
    <string name="scr_lbl_enquiry_report">Enquiry Report</string>
    <string name="scr_lbl_visit_details">Visit Details</string>
    <string name="scr_lbl_place">Place</string>
    <string name="scr_lbl_company_name_new">Company Name</string>
    <string name="scr_lbl_reminders">Reminders</string>
    <string name="scr_lbl_product_grid">Product Grid</string>
    <string name="scr_lbl_products">Products</string>
    <string name="scr_lbl_product_code">Product Code</string>
    <string name="scr_lbl_product_name">Product Name</string>
    <string name="scr_lbl_product_details">Product Details</string>
    <string name="scr_lbl_product_quantity">Product Quantity</string>
    <string name="scr_lbl_sales_amount">Sales Amount</string>
    <string name="scr_lbl_invoice_number">Invoice\nNumber</string>
    <string name="scr_lbl_total_quotation">Total Quotation</string>
    <string name="scr_lbl_vehicle_number">Vehicle Number</string>
    <string name="scr_lbl_visit_duration">Visit Duration</string>
    <string name="scr_lbl_end_start">End Start</string>
    <string name="scr_lbl_visit_number">Visit Number</string>
    <string name="scr_lbl_company_name_no_line">Company Name</string>
    <string name="scr_lbl_start_visit">Start Visit</string>
    <string name="scr_lbl_end_visit">End Visit</string>
    <string name="scr_lbl_invoice_number_no_line">Invoice Number</string>
    <string name="scr_lbl_invoice_amount">Invoice Amount</string>
    <string name="scr_lbl_no_of_invoices">No. of Invoices</string>
    <string name="scr_lbl_quotation_number_no_line">Quotation Number</string>
    <string name="scr_lbl_quotation_amount">Quotation Amount</string>
    <string name="scr_lbl_quantity">Quantity</string>
    <string name="scr_lbl_enquiry_status_no_line">Enquiry Status</string>
    <string name="scr_lbl_overdue_by_days_no_line">Overdue by days</string>
    <string name="scr_lbl_general">GENERAL</string>
    <string name="scr_lbl_change_password">Change Password</string>
    <string name="scr_lbl_my_account">My Account</string>
    <string name="scr_lbl_search">Search</string>
    <string name="scr_lbl_add_location">Add Location</string>
    <string name="scr_lbl_no_reminder">No Reminder !</string>
    <string name="scr_lbl_add_enquiry">Add Enquiry</string>
    <string name="scr_lbl_customer_search">Customer Search</string>
    <string name="scr_lbl_customer">Customer</string>
    <string name="scr_lbl_product_of_interest">Product of Interest</string>
    <string name="scr_lbl_date">Date</string>
    <string name="scr_lbl_add_holiday">Add Holiday</string>
    <string name="scr_lbl_holiday_name">Holiday name</string>
</resources>